# coursework2

./: .flake8  README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/api/: base_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: base_storage.py  json_saver.py
tests/: test_api.py  test_json_saver.py  test_main.py  test_vacancy.py
